# pox

./: Cargo.toml  README.md
examples/: victim.c
src/: hooks.rs  lib.rs  locators.rs  main.rs  monitor.rs  syscalls.rs  tricks.rs
src/needle/: executors.rs  explorers.rs  injector.rs  main.rs  monitor.rs  operations.rs  rce.rs  senders.rs  syscalls.rs
src/rc/: executors.rs  explorers.rs  mod.rs  senders.rs  syscalls.rs
src/tetanus/: lib.rs
src/vector/: main.rs  monitor.rs
