[package]
name = "rustyneedle"
version = "0.1.0"
edition = "2021"

[lib]
name = "tetanus"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "needle"
path = "src/needle/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
ctor = "0.1.26"
retour = "0.1" # plain detour doesn't work on latest nightly? idk
elf = "0.7.2"
nix = "0.26.2"
proc-maps = "0.3.0"
dlopen = "0.1.8"
