[package]
name = "rustyneedle"
version = "0.2.0"
edition = "2021"

[lib]
name = "rustyneedle"
path = "src/lib.rs"

[[bin]]
name = "needle"
path = "src/needle/main.rs"
required-features = ["bin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.7.2"
retour = "0.1" # plain detour doesn't work on latest nightly? idk
proc-maps = "0.3.0"
libloading = "0.7.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
nix = { version = "0.26.2", optional = true }
clap = { version = "4.1.13", features = ["derive"], optional = true }

[features]
rc = ["dep:nix"]
bin = ["rc", "dep:clap"]
